# my-project

./: .dockerignore  .gitignore  Dockerfile  README.md  dependencies.py  main.py  pyproject.toml
app/: __init__.py
app/agents/: __init__.py  api_for_answers.py  graph_flow.py  search_all.py
app/datasets/csv/: country_facts.csv
app/datasets/json/: college_admissions.json
app/models/: __init__.py
app/routes/: ai.py  file_upload.py
app/services/: __init__.py
app/services/chroma_collections/: json_upload_process.py  pdf_upload_process.py
app/services/csv_etl/: process.py
app/services/json_etl/: process.py
app/services/mpg_prediction/: mpg_predict_model.jlib  mpg_prediction.py
app/tools/db_tools/: __init__.py
app/tools/etl_tools/: __init__.py
app/tools/external_tools/: __init__.py
app/tools/ml_tools/: __init__.py
app/utils/: __init__.py  ai_guard_rails.py  app_exception_handler.py  applogger.py
kube/: my-project-service.yml
resources/: application.properties  messages.properties
