[project]
name = "my-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi[standard]>=0.139.0",
    "joblib>=1.5.3",
    "jq>=1.12.0",
    "jupyterlab>=4.6.1",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.3",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.8",
    "numpy>=2.5.0",
    "openai>=2.44.0",
    "pandas>=3.0.3",
    "pandas-stubs~=3.0.3",
    "pypdf>=6.14.2",
    "pyrefly>=0.60.0",
    "python-decouple>=3.8",
    "python-json-logger>=4.1.0",
    "python-multipart>=0.0.32",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.6.0",
]
